remove boilerplate styling, add scss support, add BaseLayout, BaseHeader, BaseFooter

--- a/resource-planner/index.html
+++ b/resource-planner/index.html
@@ -11,3 +11,11 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<style>
+  #app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+</style>
