--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            rel="icon"
+            href="/favicon.ico"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <title>Resource Planner</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script
+            type="module"
+            src="/src/main.ts"
+        ></script>
+    </body>
 </html>
 
 <style>
-  #app {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+    #app {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
 </style>
