--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>Resource Planner</title>
+        <title class="title">Resource Planner</title>
     </head>
     <body>
         <div id="app"></div>
@@ -21,7 +21,7 @@
     </body>
 </html>
 
-<style>
+<style scoped>
     #app {
         display: flex;
         flex-direction: column;
